--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
 
   <div class="silver-text">GAY BUDDIES</div>
 
-  <div class="profile-section" data-panel="Moosa Black Likes Pineapples">
+  <div class="profile-section" data-panel="Moosa Black Likes Fried Chicken And Water Melon ">
     <h2>Moosa Black</h2>
     <img src="image/moosa.png" alt="Moosa">
   </div>
-  <div class="profile-section alt" data-panel="Zayed’s the Weird One">
+  <div class="profile-section alt" data-panel="Zayed’s Really Weird">
     <h2>Zayed Weird</h2>
     <img src="image/zayed.png" alt="Zayed">
   </div>
