--- a/index.html
+++ b/index.html
@@ -11,108 +11,25 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
-      color: #333;
-    }
-
-    header {
-      background: black;
+      background: #000; /* Full black background */
       color: white;
-      text-align: center;
-      padding: 50px 20px;
       font-family: "Minecraft", sans-serif;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      margin: 0;
-      letter-spacing: 2px;
-    }
-
-    nav {
-      background: #222;
       display: flex;
       justify-content: center;
-      padding: 10px 0;
+      align-items: center;
+      height: 100vh; /* Center vertically */
     }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-family: "Minecraft", sans-serif;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 20px;
-      background: black;
-      color: white;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.7);
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-    }
-
-    .gallery img {
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(255,255,255,0.3);
-      transition: transform 0.2s;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-
-    footer {
-      text-align: center;
-      padding: 15px;
-      background: #111;
-      color: white;
-      margin-top: 20px;
-      font-family: "Minecraft", sans-serif;
+    h1 {
+      font-size: 4rem;
+      letter-spacing: 2px;
+      margin: 0;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>batsnefs.com</h1>
-    <p>Powered by Minecraft vibes 🟩⬛</p>
-  </header>
-
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Gallery</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </nav>
-
-  <div class="container">
-    <h2 style="font-family: 'Minecraft', sans-serif;">Gallery</h2>
-    <div class="gallery">
-      <img src="image/pic1.png" alt="Image 1">
-      <img src="image/pic2.png" alt="Image 2">
-      <img src="image/pic3.png" alt="Image 3">
-      <img src="image/pic4.png" alt="Image 4">
-    </div>
-  </div>
-
-  <footer>
-    <p>© 2025 batsnefs.com | Made with Minecraft spirit</p>
-  </footer>
+  <h1>batsnefs.com</h1>
 </body>
 </html>
-
