--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
       <img src="image/instagram.jpg" alt="Instagram"> Instagram
     </a>
     <a href="https://www.twitch.tv/batsnefs" class="social-btn" target="_blank">
-      <img src="image/twitch" alt="Twitch"> Twitch
+      <img src="image/twitch.png" alt="Twitch"> Twitch
     </a>
   </div>
 </body>
 </html>
+
 
 
