--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>batsnefs.com</title>
+  <title>batsnefs is pro</title>
   <style>
     @font-face {
       font-family: "Minecraft";
@@ -96,6 +96,7 @@
   </div>
 </body>
 </html>
+
 
 
 
