--- a/index.html
+++ b/index.html
@@ -6,60 +6,80 @@
   <title>batsnefs</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #111;
+      font-family: 'Minecraft', sans-serif;
+      background: #111;
       color: white;
+      text-align: center;
       margin: 0;
       padding: 0;
-      text-align: center;
     }
-    header {
-      padding: 20px;
-    }
+
     h1 {
-      margin: 0;
-      font-size: 2.5rem;
+      font-size: 3rem;
+      margin-top: 2rem;
     }
-    .socials {
-      margin-top: 40px;
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      flex-wrap: wrap;
+
+    .buttons {
+      margin-top: 2rem;
     }
-    .socials a {
+
+    .buttons a {
       display: inline-block;
-      text-decoration: none;
+      margin: 1rem;
+      padding: 1rem 2rem;
+      background: #333;
       color: white;
-      transition: transform 0.2s ease-in-out;
+      text-decoration: none;
+      border-radius: 12px;
+      font-size: 1.2rem;
+      transition: background 0.3s;
     }
-    .socials a:hover {
-      transform: scale(1.2);
+
+    .buttons a:hover {
+      background: #555;
     }
+
+    .socials {
+      margin-top: 3rem;
+    }
+
     .socials img {
-      width: 100px;
-      height: 100px;
-      border-radius: 15px;
-      object-fit: cover;
+      width: 80px;
+      margin: 1rem;
+      border-radius: 12px;
+      transition: transform 0.3s;
+    }
+
+    .socials img:hover {
+      transform: scale(1.1);
+    }
+
+    @font-face {
+      font-family: 'Minecraft';
+      src: url('minecraft.ttf') format('truetype');
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>batsnefs</h1>
-    <p>Welcome to my site!</p>
-  </header>
+  <h1>Welcome to batsnefs</h1>
 
-  <section class="socials">
-    <a href="https://www.youtube.com/@batsnefs" target="_blank">
+  <div class="buttons">
+    <a href="https://youtube.com/@batsnefs" target="_blank">YouTube</a>
+    <a href="https://instagram.com/q_6sim" target="_blank">Instagram</a>
+    <a href="https://twitch.tv" target="_blank">Twitch</a>
+  </div>
+
+  <div class="socials">
+    <a href="https://youtube.com/@batsnefs" target="_blank">
       <img src="youtube.jpg" alt="YouTube">
     </a>
-    <a href="https://www.instagram.com/q_6sim" target="_blank">
+    <a href="https://instagram.com/q_6sim" target="_blank">
       <img src="instagram.jpg" alt="Instagram">
     </a>
-    <a href="https://www.twitch.tv/" target="_blank">
+    <a href="https://twitch.tv" target="_blank">
       <img src="twitch.png" alt="Twitch">
     </a>
-  </section>
+  </div>
 </body>
 </html>
+
